# atlas

./: Cargo.toml  README.md
docs/: especificacoes.md  generate_structs.ps1  mapeamento_prototipos_para_arquitetura.md  mapping_structs.rs
src/: cli.rs  main.rs
src/app/: mod.rs
src/assets/: app.js  style.css
src/models/: mapping_report.rs  metrics.rs  mod.rs  node.rs  warning.rs
src/render/: html.rs  json.rs  markdown.rs
src/scanner/: mod.rs  walker.rs
src/server/: mod.rs  routes.rs
src/tui/: mod.rs
