[package]
name = "atlas"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7.5", features = ["json"] }
clap = { version = "4.5.9", features = ["derive"] }
chrono = { version = "0.4.38", features = ["clock"] }
open = "5.3.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "net", "signal"] }
tower = { version = "0.5.1", features = ["util"] }
